tests/spec/emit/snapshots/match_guard_cannot_mutate_inlined_identifier_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn bump_false(r: mut Ref<int>) -> bool {
    r.* = 1
    false
  }
  
  fn test() -> int {
    let mut x = 0
    match x {
      0 if bump_false(&x) => -1,
      1 => 1,
      _ => 0,
    }
  }
---
package main

func bumpFalse(r *int) bool {
	*r = 1
	return false
}

func test() int {
	x := 0
	subject := x
	if subject == 0 {
		if bumpFalse(&x) {
			return -1
		}
	}
	if subject == 1 {
		return 1
	}
	{
		return 0
	}
}
