tests/spec/emit/snapshots/match_guard_generic_tuple_comparison.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct W<T>(T)
  
  fn test() -> int {
    let w = W(1)
    match w {
      x if x == W(2) => 0,
      _ => 1,
    }
  }
---
package main

type W[T any] struct {
	F0 T
}

func test() int {
	w := W[int]{F0: 1}
	{
		if w == (W[int]{F0: 2}) {
			return 0
		}
	}
	{
		return 1
	}
}
