tests/spec/emit/snapshots/match_guard_generic_tuple_selector.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nstruct W<T>(T)\n\nfn test() -> int {\n  match 1 {\n    n if W(1).0 == 1 => n,\n    _ => 0,\n  }\n}\n"
---
package main

type W[T any] struct {
	F0 T
}

func test() int {
	{
		n := 1
		if (W[int]{F0: 1}).F0 == 1 {
			return n
		}
	}
	{
		return 0
	}
}
