tests/spec/emit/snapshots/match_guard_mixed.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<int>) -> string {
    match opt {
      Some(x) if x > 0 => "positive",
      Some(_) => "non-positive",
      None => "none",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) string {
	if opt.Tag == lisette.OptionSome {
		if opt.SomeVal > 0 {
			return "positive"
		}
		return "non-positive"
	}
	return "none"
}
